--- a/CPE_2014_corewar/Makefile
+++ b/CPE_2014_corewar/Makefile
@@ -5,7 +5,7 @@
 ## Login   <girard_s@epitech.net>
 ## 
 ## Started on  Sat Mar  1 10:43:43 2014 Nicolas Girardot
-## Last update Sat Apr  5 16:14:34 2014 Nicolas Girardot
+## Last update Sat Apr  5 23:26:38 2014 Valerian Polizzi
 ## Last update Fri Apr  4 14:06:04 2014 valeri
 ##
 
@@ -24,6 +24,7 @@ SRC	=	assembleur/sources/asm.c \
 		assembleur/sources/verif.c\
 		assembleur/sources/my_strcat.c			\
 		assembleur/sources/xmalloc.c			\
+		assembleur/sources/parse/parsing.c\
 		assembleur/sources/test_system.c\
 		assembleur/sources/list_d/my_put_in_list_first.c \
 		assembleur/sources/list_d/my_put_in_list_last.c\
@@ -33,9 +34,7 @@ OBJ	=	$(SRC:.c=.o)
 
 FLAGS	=	-W -Wall -Wextra -pedantic -ansi -Werror
 
-
 NAME	=	./asm
-
 
 $(NAME): $(OBJ)
 	$(CC) $(FLAGS) -o $(NAME) $(OBJ)
